--- a/busify-frontend/busify/src/styles/Reservation.css
+++ b/busify-frontend/busify/src/styles/Reservation.css
@@ -28,6 +28,127 @@ li a {
     height: 40px;
 }
 
+.mainContainer {
+    display: flex;
+    flex-direction: row;
+}
+.firstNav, .middleNav {
+    display: flex;
+    align-items: center;
+}
+.middleNav{
+    margin-left: 350px;
+}
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-left: 220px;
+}
+.button-container a{
+    text-decoration: none;
+}
+.signin-button {
+    border: 2px solid #B9C3FF;
+    border-radius: 15px;
+    padding: 10px 20px;
+    background: none;
+    width: 150px;
+    height: 40px;
+}
+
+
+.signin-button-reservation {
+    border: 2px solid #3250D5;
+    border-radius: 15px;
+    padding: 10px 20px;
+    background: none;
+    width: 150px;
+    height: 40px;
+}
+
+.signin-button-reservation a{
+    font-weight: bold;
+    color: #3250D5;
+}
+
+.circle-reservation{
+    background: #3250D5;
+    width: 40px;
+    height: 40px;
+    border-radius: 60px;
+    border: 1px solid #3250D5;
+}
+
+.circle-reservation a{
+    text-decoration: none;
+    color: white;
+    font-family: 'Baloo Thambi 2', cursive;
+    font-size: 20px;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@800&display=swap');
+.mainDiv{
+    font-family: 'Baloo Thambi 2', cursive;
+}
+ul{
+    width: 200px;
+}
+li {
+    display: inline;
+    margin-right: 10px;
+}
+
+li a {
+    text-decoration: none;
+    color: #3250D5;
+}
+
+.navBarReservation{
+    color: #3250D5;
+    height: 80px;
+    border-bottom: 1px solid gray;
+}
+
+.imgReservation{
+    background-image: url("../../public/Logo (2).png");
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+}
+
+.mainContainer {
+    display: flex;
+    flex-direction: row;
+}
+.firstNav, .middleNav {
+    display: flex;
+    align-items: center;
+}
+.middleNav{
+    margin-left: 350px;
+}
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-left: 220px;
+}
+.button-container a{
+    text-decoration: none;
+}
+.signin-button {
+    border: 2px solid #B9C3FF;
+    border-radius: 15px;
+    padding: 10px 20px;
+    background: none;
+    width: 150px;
+    height: 40px;
+}
+
+
 .signin-button-reservation {
     border: 2px solid #3250D5;
     border-radius: 15px;
@@ -153,3 +274,228 @@ li a {
     width: 20px;
     height: 20px;
 }
+
+.footer{
+    background-color: black;
+    color: white;
+    margin-top: 50px;
+    height: 150px;
+    font-family: 'Vibur';
+}
+
+.circle{
+    background: #45b6d5;
+    width: 40px;
+    height: 40px;
+    border-radius: 60px;
+    border: 1px solid #45b6d5;
+}
+
+.circle a{
+    text-decoration: none;
+    color: white;
+    font-family: 'Baloo Thambi 2', cursive;
+    font-size: 20px;
+}
+
+.addRouteButton{
+    background-color: #125699;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: 'Baloo Thambi 2', cursive;
+    height: 55px;
+    margin-left: 5px;
+    margin-top: -1px;
+}
+
+
+.signin-button a{
+    color: white;
+    font-weight: bold;
+}
+.signup-button {
+    background-color: #3698BF;
+    border: none;
+    border-radius: 15px;
+    padding: 10px 20px;
+    margin-left: 10px;
+    width: 150px;
+    height: 40px;
+}
+.signup-button a{
+    color: #162040;
+    font-weight: bold;
+}
+.mainDiv input {
+    width: 210px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    margin-right: 5px;
+}
+
+.form label{
+    position:absolute;
+    left:0;
+    top:0;
+    opacity:0;
+    transition:all 1s ease;
+}
+input:not(:placeholder-shown) + label{
+    top:-10px;
+    opacity:1;
+}
+.form{
+    position:relative;
+}
+
+button[type="submit"] {
+    background-color: #19A7CE;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: 'Baloo Thambi 2', cursive;
+    height: 50px;
+    margin-left: 1px;
+    margin-top: -1px;
+}
+
+.img1{
+    background-image: url("../../public/Logo.png");
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+}
+
+.breadcrumbs {
+    text-align: center;
+    border-bottom: 1px solid gray;
+}
+
+.routeResForm {
+    border: 1px solid #3250D5;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 500px;
+    width: 480px;
+    padding: 30px;
+    margin-top: 30px;
+}
+
+.routeBagForm {
+    border: 1px solid #3250D5;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 400px;
+    width: 700px;
+    padding: 30px;
+    margin-top: 30px;
+}
+
+.routeBagForm label {
+    display: inline-block;
+}
+
+.vertical-align {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imgOp1 {
+    background-image: url("../../public/carryOn.png");
+    background-repeat: no-repeat;
+    width: 75px;
+    height: 100px;
+}
+
+.imgOp2 {
+    background-image: url("../../public/trolleyBag.png");
+    background-repeat: no-repeat;
+    width: 75px;
+    height: 100px;
+}
+
+.imgOp3 {
+    background-image: url("../../public/checkInBag.png");
+    background-repeat: no-repeat;
+    width: 100px;
+    height: 100px;
+}
+
+.routeInsuranceForm {
+    border: 1px solid #3250D5;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 470px;
+    width: 500px;
+    padding: 30px;
+    margin-top: 30px;
+}
+
+.routeInsuranceForm label {
+    display: inline-block;
+}
+
+.card {
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 500px;
+    width: 400px;
+    padding: 30px;
+    margin-top: 15px;
+}
+
+.imgCal {
+    background-image: url("../../public/calendarIcon.png");
+    background-repeat: no-repeat;
+    width: 20px;
+    height: 20px;
+}
+
+.imgTime {
+    background-image: url("../../public/timeIcon.png");
+    background-repeat: no-repeat;
+    width: 20px;
+    height: 20px;
+}
+
+.footer{
+    background-color: black;
+    color: white;
+    margin-top: 50px;
+    height: 150px;
+    font-family: 'Vibur';
+}
+
+.circle{
+    background: #45b6d5;
+    width: 40px;
+    height: 40px;
+    border-radius: 60px;
+    border: 1px solid #45b6d5;
+}
+
+.circle a{
+    text-decoration: none;
+    color: white;
+    font-family: 'Baloo Thambi 2', cursive;
+    font-size: 20px;
+}
+
+.addRouteButton{
+    background-color: #125699;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: 'Baloo Thambi 2', cursive;
+    height: 55px;
+    margin-left: 5px;
+    margin-top: -1px;
+}
+
+
